@@ -19,6 +19,7 @@ package net.e6tech.elements.common.resources;
 import net.e6tech.elements.common.notification.NotificationCenter;
 import net.e6tech.elements.common.util.SystemException;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.Optional;
 import java.util.function.Function;
 
@@ -57,11 +58,13 @@ public interface ResourcePool {
 
     default <T> T newInstance(Class<T> cls) {
         try {
-            T instance = cls.newInstance();
+            T instance = cls.getDeclaredConstructor().newInstance();
             inject(instance);
             return instance;
-        } catch (InstantiationException | IllegalAccessException e) {
+        } catch (InstantiationException | IllegalAccessException | NoSuchMethodException e) {
             throw new SystemException(e);
+        } catch (InvocationTargetException e) {
+            throw new SystemException(e.getTargetException());
         }
     }
 
